[backend] feat(wf-engine): init split service layer (#4842)
Co-authored-by: EvaE-Filigran <eva.ezzeribi@filigran.io>
Co-authored-by: Camille Roux <camille.roux@filigran.io>
Co-authored-by: savacano28 <stephanya.casanova@filigran.io>