@@ -3,25 +3,18 @@ package io.openaev.rest.inject.service;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-import io.openaev.database.model.Agent;
-import io.openaev.database.model.ExecutionStatus;
-import io.openaev.database.model.Inject;
-import io.openaev.database.model.InjectStatus;
+import io.openaev.database.model.*;
 import io.openaev.database.repository.AgentRepository;
 import io.openaev.database.repository.InjectRepository;
-import io.openaev.rest.helper.queue.BatchQueueService;
 import io.openaev.rest.inject.form.InjectExecutionAction;
 import io.openaev.rest.inject.form.InjectExecutionCallback;
 import io.openaev.rest.inject.form.InjectExecutionInput;
-import java.io.IOException;
-import java.time.Instant;
-import java.util.List;
+import java.util.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InOrder;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -36,21 +29,10 @@ class BatchingInjectStatusServiceTest {
   @Mock private StructuredOutputUtils structuredOutputUtils;
   @Mock private InjectExecutionService injectExecutionService;
 
-  @Mock private BatchQueueService<InjectExecutionCallback> injectTraceQueueService;
-
   @InjectMocks private BatchingInjectStatusService service;
 
   private static final String INJECT_ID = "inject-1";
   private static final String AGENT_ID = "agent-1";
-  private static final int MAX_RETRIES = 5;
-
-  @BeforeEach
-  void wireQueueService() {
-    // @InjectMocks does not set non-final fields with @Setter; wire it explicitly for the tests
-    // that exercise the requeue path. Tests that want to exercise the null-guard branch can
-    // override this via service.setInjectTraceQueueService(null).
-    service.setInjectTraceQueueService(injectTraceQueueService);
-  }
 
   private Inject createInjectWithPendingStatus(String injectId) {
     Inject inject = new Inject();
@@ -90,6 +72,14 @@ class BatchingInjectStatusServiceTest {
         .build();
   }
 
+  @BeforeEach
+  void setUp() {
+    // Default stubs for most tests
+    lenient()
+        .when(structuredOutputUtils.extractOutputParsers(any(Inject.class)))
+        .thenReturn(Set.of());
+  }
+
   // ========================================================================
   // Chronological ordering
   // ========================================================================
@@ -116,20 +106,29 @@ class BatchingInjectStatusServiceTest {
 
       service.handleInjectExecutionCallback(List.of(late, early, middle));
 
-      // Verify processInjectExecutionWithAgent was called 3 times in chronological order
+      // Verify processInjectExecution was called 3 times in chronological order
       InOrder inOrder = inOrder(injectExecutionService);
       inOrder
           .verify(injectExecutionService)
-          .processInjectExecutionWithAgent(
-              eq(inject), eq(agent), argThat(input -> input == early.getInjectExecutionInput()));
+          .processInjectExecution(
+              eq(inject),
+              eq(agent),
+              argThat(input -> input == early.getInjectExecutionInput()),
+              anySet());
       inOrder
           .verify(injectExecutionService)
-          .processInjectExecutionWithAgent(
-              eq(inject), eq(agent), argThat(input -> input == middle.getInjectExecutionInput()));
+          .processInjectExecution(
+              eq(inject),
+              eq(agent),
+              argThat(input -> input == middle.getInjectExecutionInput()),
+              anySet());
       inOrder
           .verify(injectExecutionService)
-          .processInjectExecutionWithAgent(
-              eq(inject), eq(agent), argThat(input -> input == late.getInjectExecutionInput()));
+          .processInjectExecution(
+              eq(inject),
+              eq(agent),
+              argThat(input -> input == late.getInjectExecutionInput()),
+              anySet());
     }
   }
 
@@ -199,7 +198,7 @@ class BatchingInjectStatusServiceTest {
 
       doThrow(new RuntimeException("Unexpected error"))
           .when(injectExecutionService)
-          .processInjectExecutionWithAgent(any(), any(), any());
+          .processInjectExecution(any(), any(), any(), anySet());
 
       InjectExecutionCallback callback =
           createCallback(INJECT_ID, AGENT_ID, InjectExecutionAction.command_execution, 1000L);
@@ -220,7 +219,9 @@ class BatchingInjectStatusServiceTest {
   class PendingStateGuardTests {
 
     @Test
-    @DisplayName("should not process complete action for non-PENDING inject and queue it for retry")
+    @DisplayName(
+        "should not add callback to success list when complete action received for non-PENDING"
+            + " inject")
     void shouldRejectCompleteActionForNonPendingInject() {
       // Inject is in EXECUTING state, not PENDING
       Inject inject = createInjectWithExecutingStatus(INJECT_ID);
@@ -235,13 +236,9 @@ class BatchingInjectStatusServiceTest {
       List<InjectExecutionCallback> result =
           service.handleInjectExecutionCallback(List.of(callback));
 
-      // The callback is queued for retry → NOT added to the successfully-processed list,
-      // and no execution processing happened.
+      // DataIntegrityViolationException is a general Exception → NOT added to success
       assertTrue(result.isEmpty());
-      verify(injectExecutionService, never()).processInjectExecutionWithAgent(any(), any(), any());
-      verify(injectExecutionService, never()).processInjectExecutionWithInjector(any(), any());
-      // retry counter is bumped on the callback instance
-      assertEquals(1, callback.getRetryCount());
+      verify(injectExecutionService, never()).processInjectExecution(any(), any(), any(), anySet());
     }
 
     @Test
@@ -260,9 +257,7 @@ class BatchingInjectStatusServiceTest {
           service.handleInjectExecutionCallback(List.of(callback));
 
       assertEquals(1, result.size());
-      verify(injectExecutionService)
-          .processInjectExecutionWithAgent(
-              eq(inject), eq(agent), eq(callback.getInjectExecutionInput()));
+      verify(injectExecutionService).processInjectExecution(eq(inject), eq(agent), any(), anySet());
     }
 
     @Test
@@ -282,9 +277,7 @@ class BatchingInjectStatusServiceTest {
           service.handleInjectExecutionCallback(List.of(callback));
 
       assertEquals(1, result.size());
-      verify(injectExecutionService)
-          .processInjectExecutionWithAgent(
-              eq(inject), eq(agent), eq(callback.getInjectExecutionInput()));
+      verify(injectExecutionService).processInjectExecution(eq(inject), eq(agent), any(), anySet());
     }
   }
 
@@ -328,13 +321,15 @@ class BatchingInjectStatusServiceTest {
   class SuccessfulProcessingTests {
 
     @Test
-    @DisplayName("should call processInjectExecutionWithAgent with correct arguments")
+    @DisplayName("should call processInjectExecution with correct arguments")
     void shouldCallProcessInjectExecutionWithCorrectArgs() {
       Inject inject = createInjectWithPendingStatus(INJECT_ID);
       Agent agent = createAgent(AGENT_ID);
+      Set<OutputParser> outputParsers = Set.of();
 
       when(injectRepository.findAllByIdWithExpectations(anyList())).thenReturn(List.of(inject));
       when(agentRepository.findAllById(anyList())).thenReturn(List.of(agent));
+      when(structuredOutputUtils.extractOutputParsers(inject)).thenReturn(outputParsers);
 
       InjectExecutionCallback callback =
           createCallback(INJECT_ID, AGENT_ID, InjectExecutionAction.command_execution, 1000L);
@@ -343,10 +338,10 @@ class BatchingInjectStatusServiceTest {
           service.handleInjectExecutionCallback(List.of(callback));
 
       assertEquals(1, result.size());
-      assertSame(callback, result.getFirst());
+      assertSame(callback, result.get(0));
       verify(injectExecutionService)
-          .processInjectExecutionWithAgent(
-              eq(inject), eq(agent), eq(callback.getInjectExecutionInput()));
+          .processInjectExecution(
+              eq(inject), eq(agent), eq(callback.getInjectExecutionInput()), eq(outputParsers));
     }
 
     @Test
@@ -364,8 +359,7 @@ class BatchingInjectStatusServiceTest {
           service.handleInjectExecutionCallback(List.of(callback));
 
       assertEquals(1, result.size());
-      verify(injectExecutionService)
-          .processInjectExecutionWithInjector(eq(inject), eq(callback.getInjectExecutionInput()));
+      verify(injectExecutionService).processInjectExecution(eq(inject), isNull(), any(), anySet());
     }
   }
 
@@ -385,162 +379,7 @@ class BatchingInjectStatusServiceTest {
       List<InjectExecutionCallback> result = service.handleInjectExecutionCallback(List.of());
 
       assertTrue(result.isEmpty());
-      verify(injectExecutionService, never()).processInjectExecutionWithAgent(any(), any(), any());
-      verify(injectExecutionService, never()).processInjectExecutionWithInjector(any(), any());
-    }
-
-    // ------------------------------------------------------------------
-    // Retry / requeue behavior for complete-before-PENDING race condition
-    // ------------------------------------------------------------------
-
-    @Test
-    @DisplayName("should drain the requeue queue to the external queue service")
-    void shouldDrainRequeueQueueOnRequeueCallbacks() throws IOException {
-      // First call: inject is not PENDING → callback gets queued for retry
-      Inject inject = createInjectWithExecutingStatus(INJECT_ID);
-      Agent agent = createAgent(AGENT_ID);
-
-      when(injectRepository.findAllByIdWithExpectations(anyList())).thenReturn(List.of(inject));
-      when(agentRepository.findAllById(anyList())).thenReturn(List.of(agent));
-
-      long originalEmissionDate = 1000L;
-      InjectExecutionCallback callback =
-          createCallback(INJECT_ID, AGENT_ID, InjectExecutionAction.complete, originalEmissionDate);
-      long beforeHandle = Instant.now().toEpochMilli();
-      service.handleInjectExecutionCallback(List.of(callback));
-
-      // Drain
-      service.requeueCallbacks();
-
-      ArgumentCaptor<InjectExecutionCallback> captor =
-          ArgumentCaptor.forClass(InjectExecutionCallback.class);
-      verify(injectTraceQueueService).publish(captor.capture());
-      assertSame(callback, captor.getValue());
-      assertEquals(1, captor.getValue().getRetryCount());
-      // emissionDate must be bumped to "now" on retry so the re-queued callback does not
-      // compete for ordering against freshly emitted ones.
-      assertNotEquals(originalEmissionDate, captor.getValue().getEmissionDate());
-      assertTrue(
-          captor.getValue().getEmissionDate() >= beforeHandle,
-          "emissionDate should have been refreshed at retry time");
-    }
-
-    @Test
-    @DisplayName(
-        "should process a mixed batch: queue the non-PENDING complete for retry and process the "
-            + "other callback normally")
-    void shouldHandleMixedBatchOfRetryAndNormalCallbacks() {
-      // inject-1 is in EXECUTING → complete callback must be queued for retry
-      Inject executingInject = createInjectWithExecutingStatus("inject-1");
-      // inject-2 is in PENDING → complete callback must be processed normally
-      Inject pendingInject = createInjectWithPendingStatus("inject-2");
-      Agent agent1 = createAgent("agent-1");
-      Agent agent2 = createAgent("agent-2");
-
-      when(injectRepository.findAllByIdWithExpectations(anyList()))
-          .thenReturn(List.of(executingInject, pendingInject));
-      when(agentRepository.findAllById(anyList())).thenReturn(List.of(agent1, agent2));
-
-      InjectExecutionCallback retryCallback =
-          createCallback("inject-1", "agent-1", InjectExecutionAction.complete, 1000L);
-      InjectExecutionCallback normalCallback =
-          createCallback("inject-2", "agent-2", InjectExecutionAction.complete, 2000L);
-
-      List<InjectExecutionCallback> result =
-          service.handleInjectExecutionCallback(List.of(retryCallback, normalCallback));
-
-      // Only the normal callback is in the success list; the retry callback is queued instead.
-      assertEquals(1, result.size());
-      assertSame(normalCallback, result.getFirst());
-      assertEquals(1, retryCallback.getRetryCount());
-      assertEquals(0, normalCallback.getRetryCount());
-
-      // Only the pending inject was processed, not the executing one.
-      verify(injectExecutionService)
-          .processInjectExecutionWithAgent(
-              eq(pendingInject), eq(agent2), eq(normalCallback.getInjectExecutionInput()));
-      verify(injectExecutionService, never())
-          .processInjectExecutionWithAgent(
-              eq(executingInject), any(), eq(retryCallback.getInjectExecutionInput()));
-    }
-
-    @Test
-    @DisplayName(
-        "should stop retrying once MAX_RETRIES is reached and still persist the execution trace")
-    void shouldPersistExecutionTraceAfterMaxRetries() throws IOException {
-      Inject inject = createInjectWithExecutingStatus(INJECT_ID);
-      Agent agent = createAgent(AGENT_ID);
-
-      when(injectRepository.findAllByIdWithExpectations(anyList())).thenReturn(List.of(inject));
-      when(agentRepository.findAllById(anyList())).thenReturn(List.of(agent));
-
-      InjectExecutionCallback callback =
-          createCallback(INJECT_ID, AGENT_ID, InjectExecutionAction.complete, 1000L);
-      // Pretend this callback has already been retried MAX_RETRIES times
-      callback.setRetryCount(MAX_RETRIES);
-
-      List<InjectExecutionCallback> result =
-          service.handleInjectExecutionCallback(List.of(callback));
-
-      // Max retries reached → fall through to persist the trace as a last-ditch effort,
-      // not re-incremented, not re-queued.
-      assertEquals(1, result.size());
-      assertSame(callback, result.getFirst());
-      assertEquals(MAX_RETRIES, callback.getRetryCount());
-      verify(injectExecutionService)
-          .processInjectExecutionWithAgent(
-              eq(inject), eq(agent), eq(callback.getInjectExecutionInput()));
-      service.requeueCallbacks();
-      verify(injectTraceQueueService, never()).publish(any());
-    }
-
-    @Test
-    @DisplayName(
-        "should persist via injector path when MAX_RETRIES is reached and callback has no agent")
-    void shouldPersistViaInjectorPathAfterMaxRetriesWithNullAgent() throws IOException {
-      Inject inject = createInjectWithExecutingStatus(INJECT_ID);
-
-      when(injectRepository.findAllByIdWithExpectations(anyList())).thenReturn(List.of(inject));
-      when(agentRepository.findAllById(anyList())).thenReturn(List.of());
-
-      InjectExecutionCallback callback =
-          createCallback(INJECT_ID, null, InjectExecutionAction.complete, 1000L);
-      // Already exhausted retries
-      callback.setRetryCount(MAX_RETRIES);
-
-      List<InjectExecutionCallback> result =
-          service.handleInjectExecutionCallback(List.of(callback));
-
-      // Max retries reached with no agent → fall through to the injector branch of
-      // saveExecutionTrace and still persist the trace.
-      assertEquals(1, result.size());
-      assertSame(callback, result.getFirst());
-      assertEquals(MAX_RETRIES, callback.getRetryCount());
-      verify(injectExecutionService)
-          .processInjectExecutionWithInjector(eq(inject), eq(callback.getInjectExecutionInput()));
-      verify(injectExecutionService, never()).processInjectExecutionWithAgent(any(), any(), any());
-      service.requeueCallbacks();
-      verify(injectTraceQueueService, never()).publish(any());
-    }
-
-    @Test
-    @DisplayName("requeueCallbacks is a safe no-op when queue service is not configured")
-    void requeueCallbacksIsSafeWhenQueueServiceIsNull() {
-      // Simulate the legacy / unconfigured path: no queue service wired.
-      service.setInjectTraceQueueService(null);
-
-      Inject inject = createInjectWithExecutingStatus(INJECT_ID);
-      Agent agent = createAgent(AGENT_ID);
-      when(injectRepository.findAllByIdWithExpectations(anyList())).thenReturn(List.of(inject));
-      when(agentRepository.findAllById(anyList())).thenReturn(List.of(agent));
-
-      InjectExecutionCallback callback =
-          createCallback(INJECT_ID, AGENT_ID, InjectExecutionAction.complete, 1000L);
-      service.handleInjectExecutionCallback(List.of(callback));
-
-      // Must not NPE even though the in-memory requeue queue is non-empty.
-      assertDoesNotThrow(() -> service.requeueCallbacks());
-      verifyNoInteractions(injectTraceQueueService);
+      verify(injectExecutionService, never()).processInjectExecution(any(), any(), any(), anySet());
     }
 
     @Test
@@ -564,9 +403,9 @@ class BatchingInjectStatusServiceTest {
       assertEquals(2, result.size());
       // Both callbacks should reference the same Inject entity from the bulk load
       verify(injectExecutionService)
-          .processInjectExecutionWithAgent(same(inject), eq(agent1), any());
+          .processInjectExecution(same(inject), eq(agent1), any(), anySet());
       verify(injectExecutionService)
-          .processInjectExecutionWithAgent(same(inject), eq(agent2), any());
+          .processInjectExecution(same(inject), eq(agent2), any(), anySet());
     }
   }
 }
